[metadata]
name = hideme
version = 0.0.1
description = simple script for i3 that hides workspaces
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/exhq/hideme
project_urls =
    Bug Tracker = https://github.com/exhq/hideme/issues
author = exhq
keywords = linux,i3,windowmanger
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    License :: OSI Approved :: MIT License


[options]
py_modules = hideme
install_requires =
    mouse

[options.entry_points]
console_scripts =
    hideme = hideme:main
